--- a/challenge/test_challenge.ipynb
+++ b/challenge/test_challenge.ipynb
@@ -32,9 +32,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "class Solution:\n",
+    "    def romanToInt(self, s: str) -> int:\n",
+    "        symbol={\n",
+    "            \"I\":1,\n",
+    "            \"V\":5,\n",
+    "            \"X\":10,\n",
+    "            \"L\":50,\n",
+    "            \"C\":100,\n",
+    "            \"D\":500,\n",
+    "            \"M\":1000\n",
+    "        }\n",
+    "        subtraction={\n",
+    "            \"IV\":4,\n",
+    "            \"IX\":9,\n",
+    "            \"XL\":40,\n",
+    "            \"XC\":90,\n",
+    "            \"CD\":400,\n",
+    "            \"CM\":900\n",
+    "        }\n",
+    "        \n",
+    "        array_s=[*s]\n",
+    "        sum=0\n",
+    "        for i in range(0,len(array_s)):\n",
+    "            if array_s[i] not in symbol:\n",
+    "                return \"please enter a valid roman symbol\"\n",
+    "            if array_s[i] in symbol:\n",
+    "                    sum+=symbol[array_s[i]]\n",
+    "            if i+1 <= len(array_s)-1:\n",
+    "                if array_s[i]+array_s[i+1] in subtraction:\n",
+    "                    sum+=subtraction[array_s[i]+array_s[i+1]]\n",
+    "                    sum-=symbol[array_s[i]]\n",
+    "                    sum-=symbol[array_s[i+1]]\n",
+    "                \n",
+    "                       \n",
+    "        return sum    \n",
+    "        "
    ]
   },
   {
@@ -48,7 +94,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "assert  58  ==  romanToInt(\"LVIII\")\n",
@@ -60,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big(O):"
+    "##### Big(O):Time Complexity: Big O(n) ,Space Complexity: Big O(n)"
    ]
   },
   {
@@ -89,8 +146,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def singleNumber(self, nums: List[int]) -> int:\n",
+    "        \n",
+    "        for i in range(0,len(nums)):\n",
+    "            if nums.count(nums[i])== 1:\n",
+    "                return   nums[i]      "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big(O):"
+    "##### Big(O):Time Complexity: Big O(n^2) ,Space Complexity: Big O(n)"
    ]
   },
   {
@@ -145,7 +220,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def moveZeroes(self, nums: List[int]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        nonzero_place=0\n",
+    "        for i in range(len(nums)):\n",
+    "            if nums[i]!=0:\n",
+    "                nums[nonzero_place],nums[i]=nums[i],nums[nonzero_place] \n",
+    "                nonzero_place+=1\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big(O):"
+    "##### Big(O):Time Complexity: Big O(n) ,Space Complexity: Big O(n)"
    ]
   },
   {
@@ -198,8 +285,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def longestCommonPrefix(self, strs: List[str]) -> str:\n",
+    "        size = len(strs)\n",
+    "  \n",
+    "         \n",
+    "        if (size == 0):\n",
+    "            return \"\"\n",
+    "  \n",
+    "        if (size == 1):\n",
+    "            return strs[0]\n",
+    "  \n",
+    "    \n",
+    "        strs.sort()\n",
+    "      \n",
+    "        \n",
+    "    \n",
+    "        end = min(len(strs[0]), len(strs[size - 1]))\n",
+    "  \n",
+    "        i = 0\n",
+    "        while (i < end and \n",
+    "               strs[0][i] == strs[size - 1][i]):\n",
+    "            i += 1\n",
+    "  \n",
+    "        pre = strs[0][0: i]\n",
+    "        return pre"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,9 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "assert\"fl\"==  longestCommonPrefix([\"flower\",\"flow\",\"flight\"])\n",
     "assert  \"\" ==  longestCommonPrefix ([\"dog\",\"racecar\",\"car\"])\n",
@@ -223,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big(O):"
+    "##### Big(O):Time Complexity: Big O( n * log n ) ,Space Complexity: Big O(n)"
    ]
   },
   {
@@ -234,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit ('3.9.5')",
+   "display_name": "Python 2.7.18 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -248,12 +383,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "2.7.18"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e463d4507d294650ecd3dcb45b8d0e22945e7617ed47139de19af981b9edd7d0"
+    "hash": "e55666fbbf217aa3df372b978577f47b6009e2f78e2ec76a584f49cd54a1e62c"
    }
   }
  },
