--- a/challenge/test_challenge.ipynb
+++ b/challenge/test_challenge.ipynb
@@ -30,23 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def romanToInt(self, s: str) -> int:\n",
+    "\n",
+    "def romanToInt(s: str):\n",
     "        symbol={\n",
     "            \"I\":1,\n",
     "            \"V\":5,\n",
@@ -92,20 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "assert  58  ==  romanToInt(\"LVIII\")\n",
@@ -144,23 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def singleNumber(self, nums: List[int]) -> int:\n",
+    "\n",
+    "def singleNumber( nums) :\n",
     "        \n",
     "        for i in range(0,len(nums)):\n",
     "            if nums.count(nums[i])== 1:\n",
@@ -176,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,21 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def moveZeroes(self, nums: List[int]) -> None:\n",
-    "        \"\"\"\n",
-    "        Do not return anything, modify nums in-place instead.\n",
-    "        \"\"\"\n",
-    "        nonzero_place=0\n",
+    "def moveZeroes(nums):\n",
     "        for i in range(len(nums)):\n",
-    "            if nums[i]!=0:\n",
-    "                nums[nonzero_place],nums[i]=nums[i],nums[nonzero_place] \n",
-    "                nonzero_place+=1\n",
-    "    "
+    "            if(nums[i]==0):\n",
+    "                nums.remove(nums[i])\n",
+    "                nums.append(0)\n",
+    "        return nums\n",
+    "               "
    ]
   },
   {
@@ -243,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big(O):Time Complexity: Big O(n) ,Space Complexity: Big O(n)"
+    "##### Big(O):Time Complexity: Big O(n^2) ,Space Complexity: Big O(n)"
    ]
   },
   {
@@ -283,23 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def longestCommonPrefix(self, strs: List[str]) -> str:\n",
+    "def longestCommonPrefix(strs):\n",
     "        size = len(strs)\n",
     "  \n",
     "         \n",
@@ -334,20 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert\"fl\"==  longestCommonPrefix([\"flower\",\"flow\",\"flight\"])\n",
     "assert  \"\" ==  longestCommonPrefix ([\"dog\",\"racecar\",\"car\"])\n",
@@ -369,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2.7.18 64-bit",
+   "display_name": "Python 3.9.5 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -383,12 +323,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2.7.18"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e55666fbbf217aa3df372b978577f47b6009e2f78e2ec76a584f49cd54a1e62c"
+    "hash": "9bc2735d12c86d871c09e02eff10ac59b4772ae38f25ae31fdff3d0d2b0ea164"
    }
   }
  },
